# bcn_temperatures

./: .gitignore  bcn_temps.csv  pyproject.toml
temps/: __main__.py  regression_lasso.py  regression_linear.py  regression_poly.py  regression_ridge.py  regression_strategy.py  strategy.py  strategy_type.py
